# siadat.github.io

./: .gitignore  .ignore  Dockerfile  Makefile  README.md  TODO.md  about.md  ag.bash  books.html  books.json  books.template.html  books.yaml  courses.html  courses.template.html  courses.yaml  fetch.js  generate.py  header.html  homepage.css  index.html  index.template.html  index.xml  json-to-yaml.py  main.go  music.html  music.template.html  new-post.md.tmpl  out.html  package-lock.json  package.json  photography.html  photography.template.html  projects.html  projects.json  projects.template.html  projects.yaml  pyproject.toml  reading.html  reading.template.html  readings.yaml  (+3 more)
.github/workflows/: main.yml
assets/: main.css
blog/: index.html  index.xml
blog/assets/: main.css
blog/post/: bad-names.html  blgo.html  blogging-makes-you-notice.html  cassandra-nutshell.html  catching-up-with-your-industry.html  channel.html  context.html  curious-gopher-override.html  cython.html  dd.html  dependency-inversion-in-go.html  (+25 more)
build-docker-action/: Dockerfile
kilobot/: index.html
kilobots/: homepage.css  index.html  main.js
post/: blgo.html  channel.html  context.html  curious-gopher-override.html  gogs.html  golinkname.html  in_batches.html  raspberrypi-router.html  tmux-last-attached.html  tmux-pane-style.html  tmux-session-management.html
src/: blgo.md  channel.md  context.md  curious-gopher-override.md  gogs.md  golinkname.md  raspberrypi-router.md  tmux-last-attached.md  tmux-pane-style.md
templates/: index.tmpl.html  index.tmpl.xml  post.tmpl.html
(+45 files in other folders)
