[tool.poetry]
name = "homepage"
version = "0.1.0"
description = ""
authors = ["Sina Siadat <siadat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
markdown = "^3.4.3"
pyyaml = "^6.0"
markupsafe = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
